[package]
name = "p2p-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
