[workspace]
resolver = "3"
members = [
    "bus",
    "network",
    "network-common",
    "network-libp2p",
    "network-types",
]

[workspace.dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228" }
serde_json = "1.0.149"
tokio = { version = "1.48.0" }
# tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
tracing-appender = "0.2"


[profile.release]
codegen-units = 1
